@@ -411,6 +411,8 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - src/onmainwindow.{cpp,h}: rename generateHostKey () to generateKey ()
       and add a boolean parameter with a default of false to request a public
       key. Change old invocations of generateHostKey () accordingly.
+    - src/onmainwindow.cpp: refactor generateKey () a little bit to compact
+      it.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
